more style fixes

--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -162,6 +162,7 @@
                     <!--Widgets must have 'widget' class in order to render their loading screen-->
                     <div class="box box-primary widget">
                         <div class="box-header">
+                            <i class="glyphicon glyphicon-search"></i>
                             <h3 class="box-title">Search</h3>
                         </div>
                         <!-- box-body -->
@@ -176,6 +177,7 @@
                     <!--Widgets must have 'widget' class in order to render their loading screen-->
                     <div class="box box-primary widget">
                         <div class="box-header">
+                            <i class="glyphicon glyphicon-tag"></i>
                             <h3 class="box-title" id="here">Designation</h3>
                         </div>
                         <!-- box-body -->
@@ -190,6 +192,7 @@
                     <!--Widgets must have 'widget' class in order to render their loading screen-->
                     <div class="box box-primary widget">
                         <div class="box-header">
+                            <i class="glyphicon glyphicon-tag"></i>
                             <h3 class="box-title">Designation Scheme</h3>
                         </div>
                         <!-- box-body -->
@@ -231,6 +234,7 @@
                     <!--Widgets must have 'widget' class in order to render their loading screen-->
                     <div class="box box-primary widget">
                         <div class="box-header">
+                            <i class="fa fa-map-marker"></i>
                             <h3 class="box-title">Map</h3>
                         </div>
                         <!-- box-body -->
@@ -258,6 +262,7 @@
                     <!-- Custom dc widget table-->
                     <div id="crossFilterDCTest3" class="box box-primary widget">
                         <div class="box-header">
+                            <i class="glyphicon glyphicon-list-alt"></i>
                             <h3 class="box-title">Results Table</h3>
                         </div>
                         <!--box-body -->
