--- a/web/polymer-elements/number-chart/number-chart.html
+++ b/web/polymer-elements/number-chart/number-chart.html
@@ -24,15 +24,7 @@
 
       </style>
 
-      <!-- small box -->
-      <div id="smallBox" class="small-box bg-red">
-          <div class="inner">
-              <h3><div id="chart"></div></h3>
-              <p>{{title}}</p>
-          </div>
-
-          <div class="small-box-footer"></div>
-      </div>
+      <div id="chart"></div>
 
   </template>
 
