--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -115,7 +115,9 @@
                         <i class="fa fa-pie-chart"></i> <span>Dashboard</span><i class="fa fa-angle-left pull-right"></i>
                     </a>
                     <ul class="treeview-menu">
-                        <li class="active"><a href="dashboard.html"><i class="fa fa-circle-o"></i> View 1</a></li></ul>
+                        <li class="active"><a href="dashboard.html"><i class="fa fa-circle-o"></i> Slovakia</a></li>
+
+                        <li class="active"><a href="dashboardRestaurants.html"><i class="fa fa-circle-o"></i> Restaurants</a></li></ul>
                 <li class="treeview">
                     <a href="#">
                         <i class="fa fa-database"></i> <span>Query</span><i class="fa fa-angle-left pull-right"></i>
