--- a/web/dataset.html
+++ b/web/dataset.html
@@ -183,10 +183,10 @@
                         <i class="fa fa-pie-chart"></i> <span>Dashboard</span><i class="fa fa-angle-left pull-right"></i>
                     </a>
                     <ul class="treeview-menu">
-                        <li class="active"><a href="dashboard.html"><i class="fa fa-circle-o"></i> Slovakia</a></li>
+                        <li><a href="dashboard.html"><i class="fa fa-circle-o"></i> Slovakia</a></li>
 
-                        <li class="active"><a href="dashboardRestaurants.html"><i class="fa fa-circle-o"></i> Restaurants</a></li></ul>
-                <li class="treeview">
+                        <li><a href="dashboardRestaurants.html"><i class="fa fa-circle-o"></i> Restaurants</a></li></ul>
+                <li class="treeview active">
                     <a href="#">
                         <i class="fa fa-database"></i> <span>Query</span><i class="fa fa-angle-left pull-right"></i>
                     </a>
