places demo started

--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -117,8 +117,10 @@
                     <ul class="treeview-menu">
                         <li class="active"><a href="dashboard.html"><i class="fa fa-circle-o"></i> Slovakia</a></li>
 
-                        <li class="active"><a href="dashboardRestaurants.html"><i class="fa fa-circle-o"></i> Restaurants</a></li></ul>
-                <li class="treeview">
+                        <li class=""><a href="dashboardRestaurants.html"><i class="fa fa-circle-o"></i> Restaurants</a></li>
+                         <li class=""><a href="dashboardPlaces.html"><i class="fa fa-circle-o"></i> Tourpedia</a></li></ul>
+
+            <li class="treeview">
                     <a href="#">
                         <i class="fa fa-database"></i> <span>Query</span><i class="fa fa-angle-left pull-right"></i>
                     </a>
