--- a/web/dashboardRestaurants.html
+++ b/web/dashboardRestaurants.html
@@ -114,9 +114,10 @@
                         <i class="fa fa-pie-chart"></i> <span>Dashboard</span><i class="fa fa-angle-left pull-right"></i>
                     </a>
                     <ul class="treeview-menu">
-                        <li class="active"><a href="dashboard.html"><i class="fa fa-circle-o"></i> Slovakia</a></li>
+                        <li class=""><a href="dashboard.html"><i class="fa fa-circle-o"></i> Slovakia</a></li>
 
-                        <li class="active"><a href="dashboardRestaurants.html"><i class="fa fa-circle-o"></i> Restaurants</a></li></ul>
+                        <li class="active"><a href="dashboardRestaurants.html"><i class="fa fa-circle-o"></i> Restaurants</a></li>
+                        <li class=""><a href="dashboardPlaces.html"><i class="fa fa-circle-o"></i> Tourpedia</a></li></ul>
 
                 <li class="treeview">
                     <a href="#">
@@ -253,7 +254,7 @@
                         </div>
                         <!-- box-body -->
                         <div class="box-body chart-responsive">
-                            <bar-chart param="newPrice" class="dc-element"></bar-chart>
+                            <bar-chart param="newPrice" xLabel="Price" width=200 xMin="0" xMax="100" class="dc-element"></bar-chart>
                         </div>
                         <!-- /.box-body -->
                     </div>
@@ -267,7 +268,6 @@
             <div class="row">
                 <!-- Left col -->
                 <section class="col-lg-5 connectedSortable">
-
 
 
                     <!-- faceted-search -->
@@ -284,17 +284,6 @@
                         <!-- /.box-body -->
                     </div>
                     <!-- /.faceted-search -->
-
-
-
-
-
-
-
-
-
-
-
 
                 </section>
 
