--- a/web/polymer-elements/pie-chart/pie-chart.html
+++ b/web/polymer-elements/pie-chart/pie-chart.html
@@ -39,7 +39,13 @@
                 var p = this.param;
 
                 this.dimension = this.crossfilter.dimension(function(d) {
-                    return d[p].value;
+                    if (d[p].value != undefined){
+                        return d[p].value;
+
+                    } else {
+                        return d[p];
+                    }
+
                 });
                 this.group = this.dimension.group().reduceCount();
 
