- Added row-chart - Minor error fixed

--- a/web/newquery.html
+++ b/web/newquery.html
@@ -184,9 +184,10 @@
                         <i class="fa fa-pie-chart"></i> <span>Dashboard</span><i class="fa fa-angle-left pull-right"></i>
                     </a>
                     <ul class="treeview-menu">
-                        <li><a href="dashboard.html"><i class="fa fa-circle-o"></i> Slovakia</a></li>
+                        <li class=""><a href="dashboard.html"><i class="fa fa-circle-o"></i> Slovakia</a></li>
 
-                        <li><a href="dashboardRestaurants.html"><i class="fa fa-circle-o"></i> Restaurants</a></li></ul>
+                        <li class=""><a href="dashboardRestaurants.html"><i class="fa fa-circle-o"></i> Restaurants</a></li>
+                        <li class=""><a href="dashboardPlaces.html"><i class="fa fa-circle-o"></i> Tourpedia</a></li></ul>
                 <li class="treeview active">
                     <a href="#">
                         <i class="fa fa-database"></i> <span>Query</span><i class="fa fa-angle-left pull-right"></i>
