--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -25,6 +25,8 @@
     <link href="dist/css/skins/_all-skins.min.css" rel="stylesheet" type="text/css"/>
     <!-- iCheck -->
     <link href="plugins/iCheck/flat/blue.css" rel="stylesheet" type="text/css"/>
+    <!-- Own Css -->
+    <link href="common.css" rel="stylesheet" type="text/css"/>
     <!-- Morris chart -->
     <link href="plugins/morris/morris.css" rel="stylesheet" type="text/css"/>
     <!-- jvectormap -->
@@ -96,6 +98,56 @@
 
             <div class="navbar-custom-menu">
                 <ul class="nav navbar-nav">
+                    <!-- User Account: style can be found in dropdown.less -->
+                    <li class="dropdown user user-menu">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <div class="user-bar">
+                                <img src="" class="user-image" alt="User Image"/>
+                                <span class="hidden-xs user-name"></span>
+                            </div>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <!-- User image -->
+                            <li class="user-header user-div">
+                                <img src="" class="img-circle user-image3" alt="User Image">
+                                <p class="user-name3">
+
+                                    <small>Member since Nov. 2012</small>
+                                </p>
+                            </li>
+                            <!-- Menu Footer-->
+                            <li class="user-footer">
+                                <div class="pull-right">
+                                    <button ng-click="logout()" class="btn btn-default btn-flat">Sign out</button>
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="dropdown user user-menu sign">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            Sign In
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><div class="login-box-body">
+                                <p class="login-box-msg">Sign in to start your session</p>
+                                <form id="loginForm" role="form" >
+                                    <div class="form-group has-feedback">
+                                        <input type="password" class="form-control" id="password"
+                                               placeholder="Admin Password"/>
+                                        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+                                    </div>
+                                </form>
+
+                                <div class="social-auth-links text-center">
+                                    <button class="btn btn-block btn-social btn-facebook btn-flat">
+                                        <i class="fa fa-facebook"></i> Sign in using Facebook</button>
+                                    <button ng-click="login()"class="btn btn-block btn-social btn-google-plus btn-flat">
+                                        <i class="fa fa-google-plus"></i> Sign in using Google+</button>
+                                </div><!-- /.social-auth-links -->
+
+                            </div><!-- /.login-box-body --></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -105,7 +157,32 @@
     <aside class="main-sidebar">
         <!-- sidebar: style can be found in sidebar.less -->
         <section class="sidebar">
+            <!-- Sidebar user panel -->
+            <div class="user-side">
+                <div class="user-panel">
+                    <div class="pull-left image">
+                        <img src="" class="img-circle user-image2" alt="User Image" />
+                    </div>
+                    <div class="pull-left info">
+                        <p class="user-name2"></p>
 
+                        <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+                    </div>
+                </div>
+                <!-- search form -->
+                <div class="sidebar-form">
+                    <form action="#" method="get">
+                        <div class="input-group">
+                            <input type="text" name="q" class="form-control" placeholder="Search..."/>
+                         <span class="input-group-btn">
+                             <button type='submit' name='search' id='search-btn'
+                                     class="btn btn-flat"><i class="fa fa-search"></i></button>
+                         </span>
+                        </div>
+                    </form>
+                </div>
+                <!-- /.search form -->
+            </div>
             <!-- sidebar menu: : style can be found in sidebar.less -->
             <ul class="sidebar-menu">
                 <li class="header">MAIN NAVIGATION</li>
@@ -311,6 +388,8 @@
 </script>
 <!-- Bootstrap 3.3.2 JS -->
 <script src="bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+<!-- Dart -->
+<script type="application/dart" src="dashboard.dart"></script>
 <script type="text/javascript" src="packages/browser/dart.js"></script>
 <!-- Morris.js charts -->
 <script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
